--- a/www/templates/tab-1-language.html
+++ b/www/templates/tab-1-language.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Language"
  on-swipe-right="goToPage('tab.2-welcome')">
-  <ion-content class="has-header">
-  Languages
+  <ion-content class="has-header languageContent">
+	  Languages
   </ion-content>
 </ion-view>
