--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -7,7 +7,7 @@ navigation history that also transitions its views in and out.
 
   <!-- Dashboard Tab -->
   <ion-tab title="Language" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/1-language">
-    <ion-nav-view name="tab-language"></ion-nav-view>
+    <ion-nav-view name="tab-1-language"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="Welcome" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/2-welcome">
