--- a/www/templates/tab-1-language.html
+++ b/www/templates/tab-1-language.html
@@ -1,6 +1,28 @@
 <ion-view view-title="Language"
- on-swipe-right="goToPage('tab.2-welcome')">
-  <ion-content class="has-header languageContent">
-	  Languages
+ on-swipe-left="goToPage('tab.2-welcome')">
+  <ion-content class="has-header languageContent center">
+  	<br />
+  	<h1>GP For Me</h1>
+		<img id="nhsPicSmall" src="img/national_health_service.jpg" />
+		<div class="languageContent2">
+			<p ui-sref="tab.2-welcome">Welcome<img src="img/flags/uk.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­èवागत हे<img src="img/flags/india.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Welkom<img src="img/flags/southafrica.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Witaj<img src="img/flags/poland.jpg" /></p>
+			<p ui-sref="tab.2-welcome">خوش آمديد<img src="img/flags/pakistan.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­fáilte<img src="img/flags/ireland.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Willkommen<img src="img/flags/germany.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Maraba<img src="img/flags/nigeria.jpg" /></p>
+			<p class="kalpurush">­˰াগত<img src="img/flags/bangladesh.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Bine ati venit<img src="img/flags/romania.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Benvenuto<img src="img/flags/italy.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Laukiamas<img src="img/flags/lithuania.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Bem vinda<img src="img/flags/portugal.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Bienvenue<img src="img/flags/france.jpg" /></p>
+			<p ui-sref="tab.2-welcome">­Bienvenido<img src="img/flags/spain.jpg" /></p>
+		</div>
+		<div class="languageContent3">Welcome to GP For Me, the app for registering with your local doctor.<br />
+		<input type="button" value="Let's Go" />
+		</div>
   </ion-content>
 </ion-view>
