--- a/www/templates/tab-2-welcome.html
+++ b/www/templates/tab-2-welcome.html
@@ -1,8 +1,10 @@
 <ion-view view-title="Welcome"
- on-swipe-left="goToPage('tab.1-language')"
- on-swipe-right="goToPage('tab.3-i_am_a_gp')">
+ on-swipe-right="goToPage('tab.1-language')"
+ on-swipe-left="goToPage('tab.3-i_am_a_gp')">
   <ion-content class="has-header">
-		<p>Welcome to GPforME. It will help you get access to free medical care in the UK</p>
+    	<br />
+  	<h1>GP For Me</h1>
+<!-- 		<p>Welcome to GPforME. It will help you get access to free medical care in the UK</p>
 
 		<p>Everybody needs a GP even if you are not sick! So make sure you join one now.</p>
 
@@ -11,5 +13,6 @@
 		<p>Don’t worry a GP can help you no matter who you are OR where you come from. And they are free.</p>
 
 		<p>Lets meet my GP who will tell you what they do…</p>
+ -->		<img class="conversation" src="img/firstConversation.jpg" />
   </ion-content>
 </ion-view>
