--- a/www/templates/tab-3-i_am_a_gp.html
+++ b/www/templates/tab-3-i_am_a_gp.html
@@ -1,8 +1,11 @@
 <ion-view view-title="Meet a GP"
- on-swipe-left="goToPage('tab.2-welcome')"
- on-swipe-right="goToPage('tab.4-find_closest_gp')">
+ on-swipe-right="goToPage('tab.2-welcome')"
+ on-swipe-left="goToPage('tab.4-find_closest_gp')">
   <ion-content class="has-header">
-		<p>I am a GP - that means I am a General practitioner or a family doctor. 
+    	<br />
+  	<h1>Meet a GP</h1>
+
+<!-- 		<p>I am a GP - that means I am a General practitioner or a family doctor. 
 		I can look after you when you are ill. I can also help you to stay well. 
 		I am close to your house or where you sleep so I’m always nearby.</p>
 
@@ -17,6 +20,8 @@
 		<p>At our appointment we will usually have up to ten mins to talk about
 		your health needs.</p>
 
-		<p>I look forward to meeting and working with you.</p>
+		<p>I look forward to meeting and working with you.</p> -->
+
+		<img class="conversation" src="img/secondConversation.jpg" />
   </ion-content>
 </ion-view>
