--- a/www/templates/tab-5-what_to_expect.html
+++ b/www/templates/tab-5-what_to_expect.html
@@ -1,6 +1,6 @@
 <ion-view view-title="What To Expect"
- on-swipe-left="goToPage('tab.4-find_closest_gp')"
- on-swipe-right="goToPage('tab.6-you_are_ready')">
+ on-swipe-right="goToPage('tab.4-find_closest_gp')"
+ on-swipe-left="goToPage('tab.6-you_are_ready')">
   <ion-content class="has-header">
 		<div class="card">
 		  <div class="item item-text-wrap">
